--- a/index.html
+++ b/index.html
@@ -180,6 +180,23 @@ solution.</p>
 <p> Through its componets and tutorials, the application provides a way to paint for visually impaired people. </p>
 
 <h3>
+<a name="tests" class="anchor" href="#tests"><span class="octicon octicon-link"></span></a>Usability testing</h3>
+<p> Test plans and results: </p>
+<ul>
+	<li><a href="test1.html" target="_new">Test 1</a></li>
+	<li><a href="test2.html" target="_new">Test 2</a></li>
+	<li><a href="test3.html" target="_new">Test 3</a></li>
+	<li><a href="testres.html" target="_new">Result sheet</a></li>
+</ul>
+
+<h3>
+<a name="demos" class="anchor" href="#demos"><span class="octicon octicon-link"></span></a>Demo</h3>
+<p> Here is a demo of how drawing using speech works like in Sinaesthetic: </p>
+<p><iframe width="560" height="315" src="//www.youtube.com/embed/MVg73v0ghIM" frameborder="0" allowfullscreen></iframe></p>
+<p> ...and this is a demo of the sonar/playback system, used to recognise drawings: </p>
+<p><iframe width="560" height="315" src="//www.youtube.com/embed/2BfEX9XHxWQ" frameborder="0" allowfullscreen></iframe></p>
+
+<h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p><ul><li>Alexandru Tronciu (<a href="https://github.com/tralexel" class="user-mention">@tralexel</a>): prototype, UI, tutorial;</li>
