--- a/index.html
+++ b/index.html
@@ -190,8 +190,35 @@ solution.</p>
 </ul>
 
 <h3>
-<a name="demos" class="anchor" href="#demos"><span class="octicon octicon-link"></span></a>Demo</h3>
-<p>You can try Sinaesthetic yourself now: <a href="index2.html">live demo</a>.</p>
+<a name="demos" class="anchor" href="#demos"><span class="octicon octicon-link"></span></a>User guide and demos</h3>
+<p>Sinaesthetic is an app you can use to draw using your mouse or your voice. You can save your work and come back to it, change colours, erase or identify a drawing using the sonar system. You can try Sinaesthetic yourself now: <a href="index2.html">live demo</a>.</p>
+
+<p><strong>Left tool box</strong></p>
+
+<ul>
+	<li><strong>Brush:</strong> select this to enter drawing mode. More options will appear in the right tool box.</li>
+	<li><strong>Microphone:</strong> When this button is highlighted, the speech system is listening to commands.</li>
+	<li><strong>Sound:</strong> When this button is highlighted, the speech system is "talking" to you.</li>
+	<li><strong>Playback:</strong> When this button is used, the sonar is activated.</li>
+	<li><strong>Save:</strong> When this button is pressed, your work is saved (you can view saved states in the right tool box.</li>
+	<li><strong>Open:</strong> Use this button to load a drawing.</li>
+	<li><strong>Refresh:</strong> Use this button to erase all drawings from canvas.</li>
+	<li><strong>Tutorials:</strong> This opens up some tutorials and info about how to use Sinaesthetic.</li>
+</ul>
+
+<p><strong>Right tool box</strong></p>
+
+<ul>
+	<li>When selecting the brush, you can view and select thickness and colour.</li>
+	<li>When selecting the save button, you can view saved states.</li>
+</ul>
+
+<p><strong>Voice commands</strong></p>
+
+<ul>
+	<li></li>
+</ul>
+
 <p> Here is a demo of how drawing using speech works like in Sinaesthetic: </p>
 <p><iframe width="560" height="315" src="//www.youtube.com/embed/MVg73v0ghIM" frameborder="0" allowfullscreen></iframe></p>
 <p> ...and this is a demo of the sonar/playback system, used to recognise drawings: </p>
