--- a/Tests/test2.html
+++ b/Tests/test2.html
@@ -13,7 +13,7 @@
 
 <body><script type='text/javascript' language='javascript' src='/B1D671CF-E532-4481-99AA-19F420D90332/netdefender/hui/ndhui.js?0=0&amp;0=0&amp;0=0'></script>
 <header>
-	<h1>Usability Test Plan Template</h1>
+	<h1>Usability Test Plan 2</h1>
 	<span id="logo"><a href="http://www.w3.org/html/logo/">
 <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="83" height="32" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
 </a></span>
