--- a/Tests/test2.html
+++ b/Tests/test2.html
@@ -82,3 +82,10 @@
 			</ul>
 		</div>
 	</article>
+</section>
+
+<footer id="footer">
+	<span id="license"><a href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a></span>
+</footer>
+</body>
+</html>
