--- a/Tests/test3.html
+++ b/Tests/test3.html
@@ -8,7 +8,7 @@
 <meta name="description" content="usabilityTest Template with microdata" />
 <meta name="robots" content="noindex,nofollow"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<title>Usability Test Plan Template</title>
+<title>Usability Test Plan 3</title>
 <script type="text/javascript"></script><link rel='stylesheet' type='text/css' href='/B1D671CF-E532-4481-99AA-19F420D90332/netdefender/hui/ndhui.css' /></head>
 
 <body><script type='text/javascript' language='javascript' src='/B1D671CF-E532-4481-99AA-19F420D90332/netdefender/hui/ndhui.js?0=0&amp;0=0&amp;0=0'></script>
