--- a/Tests/test3.html
+++ b/Tests/test3.html
@@ -39,6 +39,7 @@
 					<li>Assess the overall ease of use of the product;</li>
 					<li>Assess the quality/usability of the speech recognition system;</li>
 					<li>Assess product accessibility in regards to visually impaired people;</li>
+					<li>Check tutorial effectiveness;</li>
 					<li>Assess if the product is helpful for a visually impaired person.</li>
 				</ul>
 		</div>
