--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <a name="interaction" class="anchor" href="#interaction"><span class="octicon octicon-link"></span></a>
 Application interaction</h3>
 </h3>
-<p> The user can interact through the application by sound. Input is received either by voice or music instrument sounds and the feedback is provided
+<p> The user can interact through the application by sound or mouse. Sound input is received by voice and the feedback is provided
   through app recorded sounds and text to speech.
 </p>
 
@@ -53,13 +53,11 @@ Application interaction</h3>
 Application concepts</h3>
 
 <p><strong>Voice driven drawing: </strong> The application provides voice controls for drawing.
-Besides the usual editing commands like save, empty and restore, voice controls include selecting a color, a paint tool, positioning it on the canavas drawing.</p>
-<p><strong>Sound driven drawing:</strong> The application controls can be mapped to the sounds chosen by the user, for example
-  an user may chose the map the application controls to piano keys ( same as the ones described above).
+Besides the usual editing commands like save, empty and restore, voice controls include selecting a colour, a paint tool, positioning it on the canvas drawing.</p>
 </p>
 <p><strong>Painting to sound:</strong> The application is able to replay a painting through sound, similar to a sonar.
-The painting is transformed from a two dimensional pixel map to a liniar sound stream in which each pixel is transformed
-to a sound. This feature will also aid accesibility for visual impaired persons.
+The painting is transformed from a two dimensional pixel map to a linear sound stream in which each pixel is transformed
+to a sound. This feature will also aid accessibility for visual impaired persons.
 </p>
 <p><strong>Tutorials</strong> The application provides interactive tutorials through which users can learn the application
   controls.
@@ -78,7 +76,7 @@ to a sound. This feature will also aid accesibility for visual impaired persons.
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Project Identity</h3>
 
-<p><strong>Color scheme</strong></p>
+<p><strong>Colour scheme</strong></p>
 
 <p>Justification of the chromatic choice for the visual identity of the application: the chromatic combination
 between blue and orange is designed to be aesthetically pleasant and to emphasize the characteristics of both
@@ -101,7 +99,7 @@ focused for more than half an hour in an unfriendly and distractive environment.
 
 <p><strong>Naming</strong></p>
 
-<p>Synesthezia is the cognitive capacity of the brain to mistaken a stimulus of a kind after having recieved it
+<p>Synesthezia is the cognitive capacity of the brain to mistaken a stimulus of a kind after having received it
 and decoding it in another stimulus' manner. For instance, a visual stimulus can be perceived by a subject
 like a sound or like a state of mind. This kind of misinterpretation of the human brain is today believed to
 be a cognitive dysfunction. However, history shows, this kind of twisted cognitive perception has helped
@@ -109,7 +107,7 @@ enrich the artistic perception of great personalities, by managing to combine tw
 obtain another given feeling from their blending. In the context of this application, synesthezia is used to
 metaphorically represent the two different kinds of stimuli that are used, interpreted and transformed.
 Another meaning of the first part in the naming of this application (explaining the use of 'i' instead of
-'y') is based on the sinus-cosinus relationship and the complementarity between these two - similarly, the
+'y') is based on the sinus-cosine relationship and the complementarity between these two - similarly, the
 two distinct senses are being transformed into a complementary result of their combination. Aesthetically
 speaking, the capacity to transform an acoustic stimulus into a visual representation isn't only based on a
 common act of semiosis, but also implies that there is a converging result of artistic nature, meaning that
